# Karpet-Bot-Telegram

./: keyboards.py  main.py  pyproject.toml  replit_zip_error_log.txt  tg.db
